// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`url loader htp://www.invalid.com throws an error 1`] = `
"'value' must contain a valid URL, for instance 'https://eno-lang.org'.

   Line | Content
 >    1 | value: htp://www.invalid.com
"
`;

exports[`url loader http:/invalid.com throws an error 1`] = `
"'value' must contain a valid URL, for instance 'https://eno-lang.org'.

   Line | Content
 >    1 | value: http:/invalid.com
"
`;

exports[`url loader https//invalid.com throws an error 1`] = `
"'value' must contain a valid URL, for instance 'https://eno-lang.org'.

   Line | Content
 >    1 | value: https//invalid.com
"
`;

exports[`url loader https://invalid throws an error 1`] = `
"'value' must contain a valid URL, for instance 'https://eno-lang.org'.

   Line | Content
 >    1 | value: https://invalid
"
`;

exports[`url loader invalid throws an error 1`] = `
"'value' must contain a valid URL, for instance 'https://eno-lang.org'.

   Line | Content
 >    1 | value: invalid
"
`;

exports[`url loader www.invalid throws an error 1`] = `
"'value' must contain a valid URL, for instance 'https://eno-lang.org'.

   Line | Content
 >    1 | value: www.invalid
"
`;

exports[`url loader www.invalid.com throws an error 1`] = `
"'value' must contain a valid URL, for instance 'https://eno-lang.org'.

   Line | Content
 >    1 | value: www.invalid.com
"
`;
